wip: my new issues - email not sent

--- a/sonar-core/src/main/resources/org/sonar/l10n/core.properties
+++ b/sonar-core/src/main/resources/org/sonar/l10n/core.properties
@@ -2065,6 +2065,7 @@ notification.dispatcher.ChangesOnMyIssue=Changes in issues assigned to me or rep
 notification.dispatcher.NewIssues=New issues
 notification.dispatcher.NewAlerts=New quality gate status
 notification.dispatcher.NewFalsePositiveIssue=New false positives
+notification.dispatcher.MyNewIssues=My New Issues
 
 
 #------------------------------------------------------------------------------
